--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,18 +1,45 @@
 {% load static %}
 <html>
     <head>
-        <title>Pankaj's blog</title>
+
+        <title>Blog App</title>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <div class="page-header">
-	{% if user.is_authenticated %}
-    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-{% endif %}
-        <h1><a href="/">Pankaj's Blog</a></h1>
+    <nav class="navbar navbar-expand-lg dark bg-dark" style="border-radius:0px;padding-top: 0.15rem; padding-bottom: 0.15rem;">
+  <div class="container-fluid">
+<!--    <a class="navbar-brand" href="/" style="padding-bottom:40px;padding-right:0px"><img src="https://i.ibb.co/GR7yF1L/Blog1.png" width="70px"></a>-->
+    <a class="navbar-brand" href="/" style="padding-top:10px;padding-right:0px"><img src="https://i.ibb.co/GR7yF1L/Blog1.png" width="70px"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'post_new' %}">
+              Create New
+            </a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
+  </div>
+</nav>
+        <div class="jumbotron" style="padding-top:13px;padding-bottom:15px;">
+<!--	{% if user.is_authenticated %}-->
+<!--            <div class="container"><a href="{% url 'post_new' %}" class="top-menu">Create New <span class="glyphicon glyphicon-plus"></span></a></div>-->
+<!--{% endif %}-->
+            <div class="container"><a href="/"><h2>Blog App</h2></a></div>
     </div>
     <div class="content container">
         <div class="row">
@@ -22,5 +49,10 @@
             </div>
         </div>
     </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     </body>
 </html>
