--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,15 +17,20 @@
     <div class="row">
         <div class="col-md-8">
 	{% block content %}
+            <ul class="list-group">
             {% for post in posts %}
+                <li class="list-group-item">
                 <div class="post">
                     <div class="date">
-                        {{ post.published_date }}
-                    </div>
-                    <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+                        <p>{{ post.published_date }}</p>
+                        <h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
                     <p>{{ post.text|linebreaksbr }}</p>
+                    </div>
                 </div>
+                </li>
+                <hr>
             {% endfor %}
+            </ul>
 	   {% endblock %}
         </div>
     </div>
