--- a/blog/templates/blog/Old2/base.html
+++ b/blog/templates/blog/Old2/base.html
@@ -8,15 +8,11 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <style>
-            {% block style %}{% endblock %}
-        </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg dark bg-dark" style="border-radius:0px;padding-top: 0.15rem; padding-bottom: 0.15rem;margin-bottom:0px">
+        <nav class="navbar navbar-expand-lg dark bg-dark" style="border-radius:0px;padding-top: 0.15rem; padding-bottom: 0.15rem;">
             <div class="container-fluid">
 <!--            <a class="navbar-brand" href="/" style="padding-bottom:40px;padding-right:0px"><img src="https://i.ibb.co/GR7yF1L/Blog1.png" width="70px"></a>-->
                 <a class="navbar-brand" href="/" style="padding-top:10px;padding-right:0px"><img src="https://i.ibb.co/GR7yF1L/Blog1.png" width="70px"></a>
@@ -31,7 +27,7 @@
                     {% if user.is_authenticated %}
                       <li class="nav-item">
                         <a class="nav-link" href="{% url 'post_new' %}">
-                          Create Post +
+                          Create New
                         </a>
                       </li>
                     {% else %}
@@ -51,7 +47,7 @@
         </div>
         <div class="content container">
             <div class="row">
-                <div>{% block content %} {% endblock %}
+                <div class="col-md-8">{% block content %} {% endblock %}
                 </div>
             </div>
         </div>
