--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,16 +1,65 @@
 {% extends 'blog/base.html' %}
+{% block style %}
+.itt:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.itt{
+    transition: 0.3s;
+}
 
+{% endblock %}
 {% block content %}
     <div class="post">
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
+                {% endif %}
+                {% if user.is_authenticated %}
+                    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}" style="float:right"><span class="glyphicon glyphicon-pencil"></span></a>
+                {% endif %}
             </div>
-        {% endif %}
+        <ul class="list-group">
+            <li class="list-group-item itt">
+<!--                <div class="container content1 mt-4" style="border:0.1px solid black;border-radius:8px">-->
+                <h2 style="margin-top:10px">{{ post.title }}</h2>
+                <p><span style="font-family: 'Open Sans', sans-serif;"><b>Written by: {{post.author}}</b></span></p>
+                <p>{{ post.text|linebreaksbr }}</p>
+<!--                </div>-->
+            </li>
+        </ul>
+    </div>
+    <div class="container">
+        <h3>Comments:</h3>
+        <ul class="list-group">
+            {% for i in view %}
+<!--                <li class="list-group-item my-2" style="border:0.5px solid black;border-radius:5px">-->
+                <li class="list-group-item my-2" style="border-radius:5px">
+                    <h4><i>{{i.authr}} </i><span style="font-family: 'Open Sans', sans-serif;">says:</span></h4>
+                    <div class="container">
+                    <p style="margin-bottom:0px">{{i.cmnt}}</p>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="container">
         {% if user.is_authenticated %}
-     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-{% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <div class="container">
+            <form method="post" action="{% url 'post_detail' pk=post.pk %}">{% csrf_token %}
+                <div class="form-group">
+                    <h6><b>Add comment</b></h6>
+                    <textarea class="form-control" id="comment" name="comment" rows="3" required></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary mx-2">Submit</button>
+                </div>
+            </form>
+        </div>
+        {% else %}
+        <div class="container" style="margin-top:0px">
+        <h5><b>Login to add comments</b></h5>
+        <br>
+        </div>
+        {% endif %}
     </div>
 {% endblock %}
