--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -21,7 +21,7 @@
                     <div class="col-md-8">
                         <div class="card">
                             <div class="card-header">Register</div>
-                            <form action="/register.html/" method="post">
+                            <form action="/login.html/" method="post">
                                 {% csrf_token %}
                                 <br>
                                 <div class="form-group row">
@@ -30,32 +30,21 @@
                                         <input type="text" id="name" class="form-control" name="name" required autofocus>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <label for="email" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
-                                    <div class="col-md-6">
-                                        <input type="text" id="email" class="form-control" name="email" required autofocus>
-                                    </div>
-                                </div>
+<!--                                <div class="form-group row">-->
+<!--                                    <label for="email" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>-->
+<!--                                    <div class="col-md-6">-->
+<!--                                        <input type="text" id="email" class="form-control" name="email" required autofocus>-->
+<!--                                    </div>-->
+<!--                                </div>-->
                                 <div class="form-group row">
                                     <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
                                     <div class="col-md-6">
                                         <input type="password" id="password" class="form-control" name="password" required>
                                     </div>
                                 </div>
-
-<!--                                <div class="form-group row">-->
-<!--                                    <div class="col-md-6 offset-md-4">-->
-<!--                                        <div class="checkbox">-->
-<!--                                            <label>-->
-<!--                                                <input type="checkbox" name="remember"> Remember Me-->
-<!--                                            </label>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-
                                 <div class="col-md-6 offset-md-4">
                                     <button type="submit" class="btn btn-primary">
-                                        Register
+                                        Login
                                     </button>
 <!--                                    <a href="#" class="btn btn-link">-->
 <!--                                        Forgot Your Password?-->
@@ -71,14 +60,14 @@
 
     {% block js %}
     <script>
-        {% if name == True %}
-            alert('Username already taken!')
-            document.location = "/register.html";
-        {% elif registered == True %}
-            alert('Registration successful! Login to continue');
-            document.location = "/login.html";
+        {% if logged %}
+            alert('Login Successful!')
+            document.location = "/";
+        {% elif logged == False %}
+            alert('Invalid Credentials!')
         {% endif %}
     </script>
     {% endblock %}
+
     </body>
 </html>
