--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,11 +1,14 @@
+{% load static %}
 <html>
 <head>
+    <title>Author - {{postz.author}}</title> 
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.jpeg' %}"/>
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.jpeg' %}"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 <!--    <link rel="stylesheet"-->
 <!--          href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"-->
 <!--          integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">-->
 <!--    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">-->
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -15,7 +18,6 @@
 <!--    <link rel="stylesgeet"-->
 <!--          href="https://rawgit.com/creativetimofficial/material-kit/master/assets/css/material-kit.css">-->
     <style>
-
 html *{
     -webkit-font-smoothing: antialiased;
 }
